--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple browser extension that supports Ninja Protocol.",
   "scripts": {
     "build:dev": "webpack --mode development --stats-error-details",
-    "build": "webpack --mode production --stats-error-details"
+    "build": "webpack --mode production --stats-error-details",
+    "analyze": "webpack --mode production --env ANALYZE=true --stats-error-details"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.162",
