--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "crypto-js": "^4.2.0",
     "elliptic": "^6.5.6",
     "glob": "^11.0.0",
+    "js-sha3": "^0.9.3",
     "process": "^0.11.10",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1"
