--- a/package.json
+++ b/package.json
@@ -1,37 +1,36 @@
 {
-  "name": "Dessage-extension",
+  "name": "Dessage-webextension",
   "version": "1.0.1",
   "description": "A simple browser extension that supports Ninja Protocol.",
   "scripts": {
-    "build:dev": "rollup -c --environment NODE_ENV:development",
-    "build": "rollup -c --environment NODE_ENV:production",
-    "analyze": "ANALYZE=true rollup -c"
+    "build:dev": "webpack --mode development --stats-error-details",
+    "build": "webpack --mode production --stats-error-details",
+    "analyze": "webpack --mode production --env ANALYZE=true --stats-error-details"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.9",
-    "@babel/preset-env": "^7.25.0",
-    "@jridgewell/sourcemap-codec": "^1.5.0",
-    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-inject": "^5.0.5",
-    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-terser": "^0.4.4",
+    "@types/chrome": "^0.0.162",
     "@types/crypto-js": "^4.2.2",
     "@types/elliptic": "^6.4.18",
+    "@types/node": "^16.0.0",
     "@types/webextension-polyfill": "^0.10.7",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "ethereumjs-util": "^7.1.5",
     "rollup": "^2.79.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-typescript2": "^0.36.0",
-    "rollup-plugin-visualizer": "^5.12.0",
     "stream-browserify": "^3.0.0",
+    "ts-loader": "^9.5.1",
     "typescript": "^4.5.4",
     "vm-browserify": "^1.1.2",
-    "webextension-polyfill": "^0.10.0"
+    "webextension-polyfill": "^0.10.0",
+    "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@ethereumjs/common": "^4.3.0",
