--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/chrome": "^0.0.162",
     "@types/crypto-js": "^4.2.2",
     "@types/elliptic": "^6.4.18",
+    "@types/qrcode": "^1.5.5",
     "@types/node": "^16.0.0",
     "@types/webextension-polyfill": "^0.10.7",
     "buffer": "^6.0.3",
@@ -45,6 +46,7 @@
     "elliptic": "^6.5.6",
     "glob": "^11.0.0",
     "js-sha3": "^0.9.3",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "qrcode": "^1.5.4"
   }
 }
