refactor wallet key logic

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "glob": "^11.0.0",
     "js-sha3": "^0.9.3",
     "process": "^0.11.10",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "js-sha512": "^0.9.0"
   }
 }
