--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@types/chrome": "^0.0.162",
     "@types/crypto-js": "^4.2.2",
     "@types/elliptic": "^6.4.18",
-    "@types/qrcode": "^1.5.5",
     "@types/node": "^16.0.0",
+    "@types/qrcode": "^1.5.5",
     "@types/webextension-polyfill": "^0.10.7",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -27,27 +27,29 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "stream-browserify": "^3.0.0",
     "ts-loader": "^9.5.1",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "typescript": "^4.5.4",
     "vm-browserify": "^1.1.2",
     "webextension-polyfill": "^0.10.0",
     "webpack": "^5.93.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
-    "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@ethereumjs/common": "^4.3.0",
     "@ethereumjs/tx": "^5.3.0",
     "bech32": "^2.0.0",
+    "bip32": "^5.0.0-rc.0",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "crypto-js": "^4.2.0",
     "elliptic": "^6.5.6",
     "glob": "^11.0.0",
     "js-sha3": "^0.9.3",
+    "js-sha512": "^0.9.0",
     "process": "^0.11.10",
     "qrcode": "^1.5.4",
-    "js-sha512": "^0.9.0"
+    "tiny-secp256k1": "^2.2.3"
   }
 }
