--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dessage-webextension",
+  "name": "Dessage",
   "version": "1.0.3",
   "description": "A simple browser extension that supports Ninja Protocol.",
   "scripts": {
@@ -40,7 +40,6 @@
     "@ethereumjs/common": "^4.3.0",
     "@ethereumjs/tx": "^5.3.0",
     "bech32": "^2.0.0",
-    "bip32": "^5.0.0-rc.0",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "crypto-js": "^4.2.0",
@@ -49,7 +48,6 @@
     "js-sha3": "^0.9.3",
     "js-sha512": "^0.9.0",
     "process": "^0.11.10",
-    "qrcode": "^1.5.4",
-    "tiny-secp256k1": "^2.2.3"
+    "qrcode": "^1.5.4"
   }
 }
