refactor content usage

--- a/dsg_ext/manifest.json
+++ b/dsg_ext/manifest.json
@@ -37,6 +37,15 @@
       "js": [
         "js/content.js"
       ],
+      "run_at": "document_start"
+    },
+    {
+      "matches": [
+        "https://x.com/*"
+      ],
+      "js": [
+        "js/content_twitter.js"
+      ],
       "run_at": "document_start",
       "all_frames": true
     }
