remove one item from permissions

--- a/dsg_ext/manifest.json
+++ b/dsg_ext/manifest.json
@@ -19,8 +19,7 @@
   "permissions": [
     "storage",
     "activeTab",
-    "alarms",
-    "tabs"
+    "alarms"
   ],
   "host_permissions": [
     "https://mainnet.infura.io/*",
